--- a/components/common/CMakeLists.txt
+++ b/components/common/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "common_ihm.c"
+idf_component_register(SRCS "common_ihm.c" "common_state.c"
                     INCLUDE_DIRS "include")
