--- a/components/peripherals_manager/CMakeLists.txt
+++ b/components/peripherals_manager/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "peripherals_manager.c"
                     INCLUDE_DIRS "include"
-                    REQUIRES common)
+                    REQUIRES common esp32-ds18b20 esp32-owb)
